fix signup and collapse button issue

--- a/static/css/login_and_signup.css
+++ b/static/css/login_and_signup.css
@@ -55,7 +55,7 @@ img {
     justify-content: space-between;
     align-self: stretch;
     border-radius: .5rem;
-    height: 80%;
+    height: 88%;
     margin-bottom: auto;
     margin-top: auto;
 }
